# arctic

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  CHANGES.md  DailyMongoStore_Sentiment_ts_28.py  DollarToMongo_Tick_20.py  DollarToMongo_Tick_28.py  MANIFEST.in  PriceToMongo_Tick.py  README-arctic.md  README.md  asv.conf.json  benchmarks.md  clean_after_tox.sh  fw_pointers_bench.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_driver_store.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
arctic/: __init__.py  _cache.py  _compression.py  _config.py  _util.py  arctic.py  auth.py  decorators.py  exceptions.py  hooks.py  hosts.py  logging.py  multi_index.py
arctic/async/: __init__.py  _internal_thread_pool.py  _workers_pool.py  async_arctic.py  async_utils.py
arctic/asynchronous/: __init__.py  _workers_pool.py  async_arctic.py  async_utils.py
arctic/backends/: backends.py  mongo.py
arctic/chunkstore/: __init__.py  _chunker.py  chunkstore.py  date_chunker.py  passthrough_chunker.py  utils.py
arctic/date/: __init__.py  _daterange.py  _generalslice.py  _mktz.py  _parse.py  _util.py
arctic/fixtures/: __init__.py  arctic.py  mongo.py
arctic/helpers/: measurement.py
arctic/pluggable/: _kv_ndarray_store.py  _pandas_ndarray_store.py  _parquet_store.py  _pickle_store.py  generic_version_store.py  key_value_datastore.py
arctic/s3/: _kv_ndarray_store.py  _pickle_store.py  generic_version_store.py  key_value_datastore.py
arctic/scripts/: arctic_copy_data.py  arctic_create_user.py  (+7 more)
benchmarks/: arrow_bench.py  benchmarks.py  cs_vs_vs.py  fast_serializable_check.py
docs/: README.md  chunkstore.md  chunkstore_api.md  conf.py  configuration.md  contributing.md  developing-conda-mac.md  faq.md  getting_started.md  index.md  index.rst  migration_py3.md  quickstart.md  releasing.md  requirements.txt  tickstore.md  users.md  versionstore.md
howtos/: 201507_demo_pydata.py  how_to_custom_arctic_library.py  how_to_use_arctic.py
src/: _compress.pyx  lz4.c  lz4f_toplevel.c  lz4f_toplevel.h  lz4hc.h
tests/: conftest.py  util.py
(+173 files in other folders)
