[metadata]
name=arctic
version=1.80.5
author=Man AHL Technology
author_email=ahl.de@man.com
maintainer_email=ahl.de@man.com
description=Man AHL Versioned TimeSeries and TickStore
license=GPL
keywords=ahl, keyvalue, tickstore, mongo, timeseries
url=https://github.com/man-group/arctic
long_description_content_type=text/markdown
cmdclass={test: PyTest}
classifiers = 
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    decorator
    enum-compat
    mock
    mockextras
    pandas<=1.0.3
    numpy<=1.18.4
    pymongo>=3.6.0, <= 3.11.0
    pytz
    tzlocal
    lz4

tests_require =
    mock
    mockextras
    pytest
    pytest-cov
    pytest-server-fixtures
    pytest-timeout
    pytest-xdist<=1.26.1
    tomli<2; python_version=='3.6'
    lz4
    
setup_requires =
    numpy<=1.18.4
    setuptools-git
    
[options.packages.find]
exclude = tests, tests.*, benchmarks

[options.entry_points]
console_scripts =
    arctic_init_library = arctic.scripts.arctic_init_library:main
    arctic_list_libraries = arctic.scripts.arctic_list_libraries:main
    arctic_delete_library = arctic.scripts.arctic_delete_library:main
    arctic_enable_sharding = arctic.scripts.arctic_enable_sharding:main
    arctic_copy_data = arctic.scripts.arctic_copy_data:main
    arctic_create_user = arctic.scripts.arctic_create_user:main
    arctic_prune_versions = arctic.scripts.arctic_prune_versions:main
    arctic_fsck = arctic.scripts.arctic_fsck:main

    
[pycodestyle]
ignore = E122,E126,E501,E731,W503,E722,W504
